--- a/Framework/Framework/Framework.vcxproj
+++ b/Framework/Framework/Framework.vcxproj
@@ -139,16 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Bullet.cpp" />
-    <ClCompile Include="Child.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Parent.cpp" />
+    <ClCompile Include="MainUpdate.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Bullet.h" />
-    <ClInclude Include="Child.h" />
+    <ClInclude Include="Constant.h" />
     <ClInclude Include="Headers.h" />
-    <ClInclude Include="Parent.h" />
+    <ClInclude Include="MainUpdate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
