--- a/Framework/Framework/Framework.vcxproj
+++ b/Framework/Framework/Framework.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainUpdate.cpp" />
     <ClCompile Include="SceneManager.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="Constant.h" />
     <ClInclude Include="Enum.h" />
     <ClInclude Include="Headers.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="MainUpdate.h" />
     <ClInclude Include="SceneManager.h" />
   </ItemGroup>
