--- a/Framework/Framework/Framework.vcxproj.filters
+++ b/Framework/Framework/Framework.vcxproj.filters
@@ -79,6 +79,9 @@
     <Filter Include="소스 파일\99. Manager\MathManager">
       <UniqueIdentifier>{fb3ad23c-3647-4da8-b51f-55002f014e98}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\98. Pattern">
+      <UniqueIdentifier>{b3844b10-3f8c-4ea8-9733-805eb8716647}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -134,6 +137,9 @@
     </ClCompile>
     <ClCompile Include="CursorManager.cpp">
       <Filter>소스 파일\99. Manager\CursorManager</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectPool.cpp">
+      <Filter>소스 파일\98. Pattern</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -211,6 +217,9 @@
     </ClInclude>
     <ClInclude Include="MathManager.h">
       <Filter>소스 파일\99. Manager\MathManager</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectPool.h">
+      <Filter>소스 파일\98. Pattern</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
